<resources>
    <string name="app_name">ChatApp</string>
    <string name="welcome_to_chatapp">Welcome to ChatApp</string>
    <string name="display_name">Display Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_out">Log out</string>
    <string name="account_settings">Account Settings</string>
    <string name="all_users">All Users</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="need_a_new_account">Need a new Account ?</string>
    <string name="send_a_message">Send a message</string>
    <string name="log_in">Log in</string>
    <string name="login_to_your_account">Login to your Account</string>
    <string name="chats">CHATS</string>
    <string name="friends">FRIENDS</string>
    <string name="requests">Requests</string>
    <string name="current_user_status">Current User Status</string>
    <string name="total_friends">Total Friends :</string>
    <string name="send_friend_request">Send friend Request</string>
    <string name="decline_friend_request">Decline Friend request</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="create_an_account">Create an Account</string>
    <string name="hi_i_m_using_chat_app">Hi, I\'m using Chat App</string>
    <string name="change_image">Change Image</string>
    <string name="change_status">Change Status</string>
    <string name="already_have_account">Already Have account</string>
    <string name="save_status">Save status</string>
    <string name="new_status">New Status...</string>
    <string name="last_seen">Last seen</string>
    <string name="default_date">Default date</string>
    <string name="default_status">Default Status</string>
    <string name="name">Name</string>
    <string name="default_message">Default Message</string>
    <string name="online">Online</string>
    <string name="select_image">SELECT IMAGE</string>
    <string name="person_doesnt_exist">This person doesn\'t exist !</string>
    <string name="uploading_image">Uploading Image...</string>
    <string name="please_wait_upload">Please wait the upload !</string>
    <string name="sucess_uploading">Succcess Uploading</string>
    <string name="error_uploading_thumbnail">Error in uploading thumbnail...</string>
    <string name="error_uploading">Error in uploading...</string>
    <string name="nothing_to_send">Nothing to send !</string>
    <string name="last_message">Last message :</string>
    <string name="last_messge_image_received">Last message : Image received</string>
    <string name="friends_since">Friends since :</string>
    <string name="open_profile">Open Profile</string>
    <string name="send_message">Send Message</string>
    <string name="select_options">Select Options</string>
    <string name="login">Login</string>
    <string name="logging_in">Logging in</string>
    <string name="check_credentials">Please wait while we check your credentials !</string>
    <string name="auth_failed">Authentication failed.</string>
    <string name="chat_app">ChatApp</string>
    <string name="yes_i_want_it">Yes, I want it !...</string>
    <string name="no_thats_sucks">No, that\'s sucks</string>
    <string name="invite_friends_questions">Do you want to invite some friends ?</string>
    <string name="friendship_important">Friendship is so important...</string>
    <string name="have_you_friends">Have you Friends ?</string>
    <string name="error_sending_error">There was some error in sending request</string>
    <string name="cancel_friend_request">Cancel Friend Request</string>
    <string name="unfriend_person">Unfriend this person</string>
    <string name="loading_user_date">Loading User Data..</string>
    <string name="please_waiting_user_data">please wait while loading the user data</string>
    <string name="accpet_friend_request">Accept Friend Request</string>
    <string name="request_sent">Request sent :</string>
    <string name="sel_image">SELECT_IMAGE</string>
    <string name="please_wait_saving_status">Please wait while we save your status !</string>
    <string name="error_saving_changes">There was some errors in saving changes</string>
    <string name="account_status">Account Status</string>
    <string name="users">Users</string>
    <string name="initial_status">Hi, I\'m using Chat App</string>
    <string name="just_now">just now</string>
    <string name="minute_ago">a minute ago</string>
    <string name="minutes_ago">minutes ago</string>
    <string name="hours_ago">hours ago</string>
    <string name="days_ago">days ago</string>
    <string name="seen">Seen</string>
    <string name="hour_ago">an hour ago</string>
    <string name="yesterday">Seen yesterday</string>


</resources>
